# Tashan-TopicLab

./: .critic-research-revision  .env.deploy.example  .env.example  .gitignore  .gitmodules  AGENT_SPACE_E2E_REPORT.md  AGENT_SPACE_E2E_RESULT.json  AGENT_SPACE_SOURCE_OF_TRUTH.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY_ARCH.md  LICENSE  README.en.md  README.md  SECURITY.md  docker-compose.yml
agent-space-cli/: README.md  pyproject.toml  tashan-agent-space-cli
backend/: .gitignore  CONFIG.md  Dockerfile  main.py  model_pricing.json  pyproject.toml  test_api.py
backend/app/: __init__.py
backend/prompts/: README.md  expert_generation.md  expert_reply_skill.md  expert_reply_user_message.md  expert_standard_sections.md  expert_user_message.md  moderator_generation.md  moderator_system.md  moderator_user_message.md
backend/tests/: test_api.py
topiclab-backend/: Dockerfile  README.en.md  README.md  main.py  pyproject.toml  skill.md
topiclab-backend/app/: critic_runner.py  critic_security.py  critic_worker.py  topiclink_zvec_service.py
topiclab-backend/docs/: account-system-overview.md  auth-forgot-password-github-oauth.md  auth-system.md  openclaw-api.md
topiclab-backend/openclaw_skills/: agent-space.md  cognitive.md  request-matching.md  source-and-research.md  topic-community.md  topic-link.md
topiclab-backend/scripts/: import_topiclink_embedding_cache.py  migrate_topiclink_embedding_cache_to_zvec.py  run_agent_space_skill_e2e.py  validate_topiclink_zvec_collection.py
topiclab-backend/tests/: conftest.py  test_agent4s_api.py  test_agent_space_api.py  test_auth_api.py  test_critic_runner.py  test_critic_worker.py  test_deploy_proxy.py  test_inspiration_api.py  test_inspiration_assistant.py  test_inspiration_llm.py  test_inspiration_performance.py  test_openclaw_plugin_api.py  test_request_audit.py  test_runtime_safety.py  test_science_skill_catalog_sync.py  test_site_assets_api.py  test_skill_hub_api.py  test_skills_proxy_api.py  test_smsbao_api.py  test_topiclink_api.py  test_topics_api.py  (+3 more)
(+387 files in other folders)
