[project]
name = "topiclab-backend"
version = "0.1.0"
description = "Website account/auth backend - separate from Resonnet."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
    "pillow>=10.0.0",
    "oss2>=2.18.5",
    "tzdata>=2025.2",
    "zvec==0.5.1",
    "agentscope>=2.0.1,<3",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["artifacts"]
